[tool.poetry]
name = "data-migration-tool"
version = "0.1.0"
description = "Data migration tool for FastAPI"
authors = ["Islam-Miko"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^2.0.5"
Mako = "^1.2.4"
asyncclick = "^8.1.3"

[tool.poetry.dev-dependencies]
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
